# platonvin.github.io

./: .eleventy.js  .gitignore  .gitmodules  Makefile  README.md  TODO  index.html  lum.css  main.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  repomix-output.xml  styles.css
.github/workflows/: deploy-static.yml  deploy-wasm.yml  deploy.yml  node.js.yml
app/: globals.css  layout.tsx  page.tsx
article_sources/: how_i_render_voxels.html  my_experience_with_rust.html  rust.md
articles/: how_i_render_voxels.html  last_gapi.html  my_experience_with_rust.html  my_experience_with_rust2.html  no_gpus.html  template.html
lib/: fractalRenderer.ts
lum-rs/: .gitignore  Cargo.toml  README.md  TODO.md  rustfmt.toml
lum-rs/.cargo/: config.toml
lum-rs/.github/workflows/: ci.yml  release.yml
lum-rs/as_u8_slice_derive/: Cargo.toml
lum-rs/as_u8_slice_derive/src/: lib.rs
lum-rs/containers/: Cargo.toml
lum-rs/containers/src/: arena.rs  array3d.rs  bit_array.rs  lib.rs  multiprocessor.rs  ring.rs
lum-rs/example/: index.html
lum-rs/example/assets/: Cargo.toml  build.rs
lum-rs/example/assets/assets/blocks/: black_block.vox
lum-rs/example/assets/assets/unused/: mob.vox  player.vox
lum-rs/example/assets/src/: lib.rs
lum-rs/example/demo/: Cargo.toml
lum-rs/example/demo/src/: demo_lib.rs
lum-rs/lum/: Cargo.toml
lum-rs/lum/benches/: arrays.rs  hmap_vs_iter.rs  radiance.rs  threads.rs
lum-rs/lum/cpp/: macros.hpp  my_cpp_code.cpp
lum-rs/lum/src/: aabb.rs  ao_lut.rs  lib.rs  load_interface.rs  render_interface.rs  types.rs
lum-rs/lum/src/vulkan/: gen_perlin_noise.rs  load.rs  mod.rs  pc_types.rs  render.rs  types.rs
lum-rs/lum/src/vulkan/all_resources/: all_buffers.rs  all_cmbufs.rs  all_images.rs  all_pipes.rs  all_rpasses.rs  all_samplers.rs  mod.rs
lum-rs/lum/src/webgpu/: gen_perlin_noise.rs  load.rs  mod.rs  render.rs  types.rs  wal.rs
lum-rs/lum/src/webgpu/all_resources/: all_buffers.rs  all_images.rs  all_pipes.rs  all_samplers.rs  all_types.rs  mod.rs
lum-rs/lumal/: .gitignore  Cargo.toml  README.md  TODO  rustfmt.toml
lum-rs/lumal/src/: barriers.rs  blit_copy.rs  buffers.rs  descriptors.rs  images.rs  lib.rs  macros.rs  pipes.rs  renderer.rs  rpass.rs  samplers.rs
lum-rs/shaders/: Cargo.toml  build.rs
lum-rs/shaders/shaders/: diffuse.frag  fill_stencil_glossy.frag  fill_stencil_smoke.frag  fill_stencil_smoke.vert  fullscreen_triag.vert  glossy.frag  grass.vert  hbao.frag  lightmap_blocks.vert  overlay.frag  perlin2.comp  perlin3.comp  radiance.comp  raygen_blocks.frag  raygen_blocks.vert  raygen_models.frag  raygen_models.vert  raygen_particles.geom  raygen_particles.vert  smoke.frag  tonemap.frag  update_grass.comp  update_water.comp  water.vert
lum-rs/shaders/shaders_wgpu/: diffuse.frag  fill_stencil_glossy.frag  fill_stencil_smoke.frag  fill_stencil_smoke.vert  fullscreen_triag.vert  glossy.frag  grass.frag  grass.vert  hbao.frag  lightmap_blocks.vert  lightmap_models.vert  map.comp  perlin2.comp  perlin3.comp  radiance.comp  raygen_blocks.frag  raygen_blocks.vert  raygen_models.frag  raygen_models.vert  raygen_particles.frag  raygen_particles.vert  smoke.frag  tonemap.frag  update_grass.comp  update_water.comp  water.frag  water.vert
lum-rs/shaders/src/: lib.rs
lum-rs/voxc/: Cargo.toml
lum-rs/voxc/src/: lib.rs  load.rs
media/: cpp_constructors_meme.webm
pkg/: demo_lib.d.ts  demo_lib.js  demo_lib_bg.wasm  demo_lib_bg.wasm.d.ts
projects/: grapher.html  lum.html
sources/: cv.css  cv.html  cv_ru.css  cv_ru.html
sources/_includes/layouts/: article.njk  lum.njk
sources/articles/: BLOAT.md  articles.11tydata.js  how_i_render_voxels.md  last_gapi.md  my_experience_with_rust.md  my_experience_with_rust2.md  on_llms.md  template.html
sources/projects/: lum.11ty.js  lum_template.html  template.html
sources/rfcs/: algebraic_types.md  at.glsl  at.hlsl  at.odin  at.wgsl  at.zig
sources/rfcs/at/: algebraic_types.md  at.c  at.glsl  at.hlsl  at.mtl  at.wgsl  at.zig
sources/rfcs/more_control/: control.md
src/app/: dasd.tsx  globals.css  layout.tsx  page.tsx
src/components/CV/: CV.tsx
src/lib/: cvContent.ts  fractalRenderer.ts  windows.ts
