[package]
name = "lumal"
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[features]
default = []
validation_layers = []
debug_validation_names = ["validation_layers"]

[profile.dev]
#enable debug names for validation_layers use in Lum
features = ["debug_validation_names"]

[dependencies]
ash = { version = "0.38", default-features = false, features = ["loaded"] }
gpu-allocator = { version = "0.27.0", default-features = false, features = [
    "vulkan",
] }
winit = "0.30.11"
ash-window = "0.13.0"
containers = { path = "../containers" }
