[package]
name = "demo"
version = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[features]
default = []
wgpu_backend = ["lum/wgpu_backend"]
vk_backend = ["lum/vk_backend"]

[dependencies]
lum = { path = "../../lum" }
containers = { path = "../../containers" }
shaders = { path = "../../shaders" }
assets = { path = "../assets" }
winit = "0.30.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element"] }
futures = "0.3.31"
log = "0.4.27"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

[[bin]]
path = "src/bin/demo_vk.rs"
name = "demo_vk"

[[bin]]
path = "src/bin/demo_wgpu.rs"
name = "demo_wgpu"

[lib]
# we want to build for web, too
crate-type = ["cdylib", "rlib"]
path = "src/demo_lib.rs"
name = "demo_lib"
